# FastAPI-Note

./: .gitignore  README.md  myapi.db  pyproject.toml  run-server.sh
app/: main.py  models.py
app/core/: db.py
app/domain/answer/: answer_crud.py  answer_router.py  answer_schema.py
app/domain/question/: question_crud.py  question_router.py  question_schema.py
app/domain/user/: user_crud.py  user_router.py  user_schema.py
migrations/: env.py
migrations/versions/: c0e3d4c20c81_.py  efa3b69584e8_.py  f9d57f96e5d7_.py
